fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -236,7 +236,6 @@ form .form-button {
 }
 
 .navbar-fixed-bottom {
-  padding: 1rem;
   background: white;
 }
 
